--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
     "require": {
-        "silex/silex": "~2.0"
+        "silex/silex": "~2.0",
+        "monolog/monolog": "^1.20",
+        "twig/twig": "^1.24"
     },
     "autoload": {
         "psr-4": {"OIDCWebClient\\": "src/"}
