--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,12 @@
     "require": {
         "silex/silex": "~2.0",
         "monolog/monolog": "^1.20",
-        "twig/twig": "^1.24"
+        "twig/twig": "^1.24",
+        "symfony/form": "^3.1",
+        "symfony/validator": "^3.1",
+        "symfony/config": "^3.1",
+        "symfony/translation": "^3.1",
+        "symfony/twig-bridge": "^3.1"
     },
     "autoload": {
         "psr-4": {"OIDCWebClient\\": "src/"}
