--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,10 @@
 {
+    "repositories": [
+      {
+          "type": "vcs",
+          "url": "https://github.com/corentingi/OpenID-Connect-PHP"
+      }
+    ],
     "require": {
         "silex/silex": "~2.0",
         "monolog/monolog": "^1.20",
@@ -7,7 +13,8 @@
         "symfony/validator": "^3.1",
         "symfony/config": "^3.1",
         "symfony/translation": "^3.1",
-        "symfony/twig-bridge": "^3.1"
+        "symfony/twig-bridge": "^3.1",
+        "jumbojett/openid-connect-php": "dev-master"
     },
     "autoload": {
         "psr-4": {"OIDCWebClient\\": "src/"}
