--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,15 @@
         "symfony/config": "^3.1",
         "symfony/translation": "^3.1",
         "symfony/twig-bridge": "^3.1",
-        "jumbojett/openid-connect-php": "dev-master"
+        "jumbojett/openid-connect-php": "dev-master",
+        "twbs/bootstrap": "4.0.0-alpha.3"
     },
     "autoload": {
         "psr-4": {"OIDCWebClient\\": "src/"}
+    },
+    "scripts": {
+        "post-update-cmd": [
+            "cp -R vendor/twbs/bootstrap/dist/* web/"
+        ]
     }
 }
