--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
       }
     ],
     "require": {
+        "php": "^7.0.0",
         "silex/silex": "~2.0",
         "monolog/monolog": "^1.20",
         "twig/twig": "^1.24",
@@ -16,6 +17,9 @@
         "symfony/twig-bridge": "^3.1",
         "jumbojett/openid-connect-php": "dev-master",
         "twbs/bootstrap": "4.0.0-alpha.3"
+    },
+    "require-dev": {
+      "heroku/heroku-buildpack-php": "*"
     },
     "autoload": {
         "psr-4": {"OIDCWebClient\\": "src/"}
